<resources>
    <string name="app_name">Status Ji</string>

    <!--tab name-->
    <string name="tab1">Categories</string>
    <string name="tab2">Latest</string>
    <string name="tab3">Trending</string>
    <string name="tab4">PhotoGraphy</string>
    <string name="tab5">Wild Animals</string>
    <string name="tab6">Travel Places</string>

    <!--Tab 1-->
    <string name="cd_main_image">main image</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!--navigation drawer menu name-->
    <string name="drawer_home">Home</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_gPlus">Google+</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="app_email">dr.m.karthiik@gmail.com</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="of">of</string>
    <string name="result">Result</string>
    <string name="equals_to">=</string>
    <string name="percent_text">%</string>
    <string name="discount">Discount</string>
    <string name="actual_price">Percentage</string>
    <string name="percent">What is</string>
    <string name="activity_done">Done</string>
    <string name="btn_calculate">Calculate</string>


    <string name="hint_actual_price">Enter Price</string>
    <string name="hint_discount">Enter Discount</string>
    <string name="final_price_is">Final Price is</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_percentage">What is </string>
    <string name="hint_percentage_is">Percent of </string>
    <string name="equal_to">=</string>

    <!--EMI-->

    <string name="hint_principal">Principal Amount</string>
    <string name="hint_interest">Interest rate per Year</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI</string>
    <string name="hint_interest_total">Total Interest for Loan</string>

    <!--Action Bar-->
    <string name="action_profile">Profile</string>
    <string name="action_share">Information</string>
    <string name="action_rate">Rate App</string>
    <string name="action_more">More Apps</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstiial_delay">5000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Exit Dialog-->
    <string name="message">Do you want to exit?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="video_status">Video Status</string>
    <string name="text_status">Text Status</string>
    <string name="image_status">Image Status</string>
    <string name="vid_status">New Video Status!!</string>
    <string name="msg">Single place for all Content</string>
    <string name="gif_status">Gif Status</string>
    <string name="internet_error">No Internet Connection</string>
    <string name="app_folder_name">api</string>
    <string name="fb_messanger">Messanger</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="Share">Share</string>
    <string name="main_screen_ad">ca-app-pub-3748283843614648/2824075637</string>
    <string name="main_screen_ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="get_content_screen_id">ca-app-pub-3748283843614648/8942761428</string>

</resources>
