<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_video"
            android:icon="@drawable/ic_home"
            android:title="@string/video_status" />

        <item
            android:id="@+id/drawer_text"
            android:icon="@drawable/ic_profile"
            android:title="@string/text_status" />

        <item
            android:id="@+id/drawer_image"
            android:icon="@drawable/ic_youtube"
            android:title="@string/image_status" />
    </group>

    <item android:title="Test">

        <menu>

            <item
                android:id="@+id/list_all"
                android:icon="@drawable/ic_home"
                android:title="@string/video_status" />

            <item
                android:icon="@drawable/ic_profile"
                android:title="@string/text_status" />

            <item
                android:icon="@drawable/ic_youtube"
                android:title="@string/image_status" />
        </menu>

    </item>

</menu>