<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">
        <!--

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/nav_icon"
                    android:visibility="@string/drawer_visibility" />
        -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vid_status"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="@string/drawer_visibility" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/msg"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="@string/drawer_visibility" />

    </LinearLayout>

</LinearLayout>